# RAG_System

./: .gitignore  AGENTS.md  README.md  doc.txt  requirements-workspace.txt
Crawler/: README.md  pyproject.toml
Crawler/crawler/: __init__.py  chunking.py  cli.py  config.py  discovery.py  extraction.py  models.py  pipeline.py  storage.py  utils.py
Crawler/crawler/tests/: test_chunking.py  test_discovery.py  test_extraction.py  test_extraction_footer.py  test_storage.py
Embedding_Indexing/: README.md  pyproject.toml
Embedding_Indexing/data/qdrant/: meta.json
Embedding_Indexing/data/qdrant/collection/wechat_framework_chunks/: storage.sqlite
Embedding_Indexing/data/qdrant_bge_small/: meta.json
Embedding_Indexing/data/qdrant_bge_small/collection/wechat_framework_chunks_small/: storage.sqlite
Embedding_Indexing/embedding_indexing/: __init__.py  __main__.py  cli.py  config.py  embeddings.py  io.py  models.py  pipeline.py  qdrant_store.py  rerankers.py
Embedding_Indexing/tests/: test_cli.py  test_embeddings.py  test_io.py  test_pipeline.py  test_qdrant_store.py  test_search_logic.py
Embedding_Indexing/tests/fixtures/: sample_chunks.jsonl
FrontEnd/: README.md  index.html  package-lock.json  package.json  playwright.config.ts  questions.example.txt  questions.txt  tsconfig.app.json  tsconfig.app.tsbuildinfo  tsconfig.node.tsbuildinfo  vite.config.js  vite.config.ts  vitest.setup.ts
LLM/: README.md  pyproject.toml
LLM/data/: app.sqlite3
LLM/llm/: __init__.py  __main__.py  _embedding_indexing.py  api.py  cli.py  config.py  generator.py  models.py  networking.py  prompting.py  retrieval.py  service.py  storage.py
LLM/scripts/: run_stream_concurrency_benchmark.py
LLM/tests/: test_api.py  test_cli.py  test_generator.py  test_networking.py  test_prompting.py  test_retrieval.py  test_service.py  test_storage.py
crawler_part/: README.md  pyproject.toml
evaluation/: __main__.py  auto_annotate.py  (+13 more)
(+59 files in other folders)
