[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wechat-framework-crawler"
version = "0.1.0"
description = "Crawler for WeChat Mini Program framework docs."
requires-python = ">=3.11"
dependencies = [
  "beautifulsoup4>=4.12.0",
  "lxml>=5.0.0",
  "orjson>=3.10.0",
  "playwright>=1.51.0",
  "typer>=0.12.0",
]

[project.scripts]
crawler = "crawler.cli:app"

[project.optional-dependencies]
dev = [
  "pytest>=8.0.0",
]

[tool.pytest.ini_options]
testpaths = ["crawler/tests"]

[tool.setuptools]
packages = ["crawler"]
